correction présentation fcc france

--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -177,7 +177,7 @@
         \end{columns}
     \end{block}
     
-    \begin{block}{FCC - Future Circular Collider (CERN)}
+    \begin{block}{FCC-ee - Future Circular Collider (CERN)}
         \begin{columns}
         
             \begin{column}{0.45\textwidth}
@@ -190,7 +190,7 @@
                 \begin{itemize}
                     \item Collisionneur circulaire
                     \item 100 km
-                    \item 100 TeV dans le centre de masse
+                    \item 140 GeV dans le centre de masse
                 \end{itemize}
             \end{column}
             
@@ -215,10 +215,12 @@
                     \begin{itemize}
                         \item Mesure d'énergie
                         \item Mesure de trajectoire
+                        
                     \end{itemize}
                     \item Très bonne performance des Algorithmes de Flux de Particules
                     \item Candidat pour les futurs collisionneurs leptoniques
                     \item Septembre nouvelle phase de tests en faisceaux
+                    \item En cours de développement : exploitation du temps à 100 pico s
                 \end{itemize}
             \end{column}
 	
