update présentation FCC France

--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -220,7 +220,7 @@
                     \item Très bonne performance des Algorithmes de Flux de Particules
                     \item Candidat pour les futurs collisionneurs leptoniques
                     \item Septembre nouvelle phase de tests en faisceaux
-                    \item En cours de développement : exploitation du temps à 100 pico s
+                    \item En cours de développement : exploitation du temps à 100 pico-seconde
                 \end{itemize}
             \end{column}
 	
