fcc fr - add bas de page

--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -16,7 +16,7 @@
 
 \author[Hocine]{Alexia HOCINE\\Étudiante en Master 2 en Physique SUBAtomique}
 
-\title{
+\title[$ e^{+} e^{-} \longrightarrow \nu \nu H $]{
 	%Comparaison des prédictions des suites logicielles de ILC (iLCSoft) et de FCC (key4HEP) \\
 	%sur un signal $ e^{+} e^{-} \longrightarrow Z H $ 
     Détecteur SDHCAL pour le signal $ e^{+} e^{-} \longrightarrow \nu \nu H $: \\
@@ -34,7 +34,7 @@
 \setbeamercovered{transparent} 
 \setbeamertemplate{navigation symbols}{} 
 \logo{} 
-\institute[UCBL]{Université de Claude Bernard Lyon 1} 
+\institute[IP2I]{Université de Claude Bernard Lyon 1} 
 \date[2022]{1\ier Juillet 2022} 
 \subject{nnhA} 
 
@@ -54,6 +54,8 @@
 
 % math 
 \newcommand{\bbar}{\overline{b}}
+
+\useoutertheme{infolines}
 
 \begin{document}
 
@@ -486,44 +488,44 @@
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\backupbegin
+%\backupbegin
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Sources des Figures}
+%\begin{frame}{Sources des Figures}
 
-\listoftables 
+%\listoftables 
 
 %\begin{description}
 	%\item[\ref{fig:Michelson}] \url{public.virgo-gw.eu/index.php?gmedia=Rv7bB&t=g\#photoBox-54}
 %\end{description}
 
-\end{frame}
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Bibliographie}
+%\begin{frame}{Bibliographie}
 
 %\begin{description}
 	%\item[\ref{fig:Michelson}] \url{public.virgo-gw.eu/index.php?gmedia=Rv7bB&t=g\#photoBox-54}
 %\end{description}
 
-\end{frame}
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\appendix
-\begin{frame}
+%\appendix
+%\begin{frame}
 
-\begin{center}
-\Huge{Suppléments}
-\end{center}
+%\begin{center}
+%\Huge{Suppléments}
+%\end{center}
 
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Annexes}
-\end{frame}
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\backupend
+
+%\begin{frame}{Annexes}
+%\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\backupend
 \end{document}
