--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -18,7 +18,7 @@
 
 \author[Hocine]{Alexia HOCINE\\Étudiante en Master 2 en Physique SUBAtomique}
 
-\title[$ e^{+} e^{-} \longrightarrow \nu \nu H $]{
+\title[Analyse de donnée de $ e^{+} e^{-} \longrightarrow \nu \nu H $]{
 	%Comparaison des prédictions des suites logicielles de ILC (iLCSoft) et de FCC (key4HEP) \\
 	%sur un signal $ e^{+} e^{-} \longrightarrow Z H $ 
     Détecteur SDHCAL pour le signal $ e^{+} e^{-} \longrightarrow \nu \nu H $: \\
@@ -72,10 +72,10 @@
 \begin{frame}{Sommaire}
     
     \begin{columns}
-        \begin{column}{0.4\textwidth}
+        \begin{column}{0.3\textwidth}
         \tableofcontents
         \end{column}
-        \begin{column}{0.6\textwidth}
+        \begin{column}{0.65\textwidth}
     \begin{figure}[h!]
 	\center
     \resizebox{\textwidth}{!}{
@@ -128,14 +128,14 @@
 
 	\begin{columns}
 		
-		\begin{column}{0.5\textwidth}
+		\begin{column}{0.45\textwidth}
 			\begin{description}
 				\item[$e^{+} e^{-}$] collisionneur leptonique
 				\item[$\nu \nu h$] 2 neutrinos-higgs
 			\end{description}
 		\end{column}
 		
-		\begin{column}{0.35\textwidth}
+		\begin{column}{0.3\textwidth}
 			\begin{block}{Canaux analysés}
 				\begin{enumerate}
 					\item $h \longrightarrow WW \longrightarrow qqqq$
@@ -154,6 +154,45 @@
 		\end{column}
 	\end{columns}
     
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Détecteur SDHCAL}
+
+\begin{frame}{Détecteur SDHCAL}
+    \begin{block}{SDHCAL}
+
+        \begin{columns}
+            \begin{column}{0.5\textwidth}
+                \begin{itemize}
+                    \item Collaboration internationale CALICE
+                    \item Semi-Digital Hadronic CALorimeter
+                    \item Calorimètres à grande granularité
+                    \begin{itemize}
+                        \item Mesure d'énergie
+                        \item Mesure de trajectoire
+                        
+                    \end{itemize}
+                    \item Très bonne performance des Algorithmes de Flux de Particules
+                    \item Candidat pour les futurs collisionneurs leptoniques
+                    \item Septembre nouvelle phase de tests en faisceaux
+                    \item En cours de développement : exploitation du temps à 100 pico-seconde
+                \end{itemize}
+            \end{column}
+	
+            \begin{column}{0.45\textwidth}
+                \begin{figure}
+                    \center
+                    \includegraphics[width=\textwidth]{../img/SDHCAL.png}
+                    \caption{Détecteur SDHCAL}
+                    \label{detector}
+                \end{figure}
+            \end{column}
+        \end{columns}
+    \end{block}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -205,43 +244,21 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Détecteur SDHCAL}
+\section{Programmes}
 
-\begin{frame}{Détecteur SDHCAL}
-    \begin{block}{SDHCAL}
-
-        \begin{columns}
-            \begin{column}{0.5\textwidth}
-                \begin{itemize}
-                    \item Collaboration internationale CALICE
-                    \item Semi-Digital Hadronic CALorimeter
-                    \item Calorimètres à grande granularité
-                    \begin{itemize}
-                        \item Mesure d'énergie
-                        \item Mesure de trajectoire
-                        
-                    \end{itemize}
-                    \item Très bonne performance des Algorithmes de Flux de Particules
-                    \item Candidat pour les futurs collisionneurs leptoniques
-                    \item Septembre nouvelle phase de tests en faisceaux
-                    \item En cours de développement : exploitation du temps à 100 pico-seconde
-                \end{itemize}
-            \end{column}
-	
-            \begin{column}{0.45\textwidth}
-                \begin{figure}
-                    \center
-                    \includegraphics[width=\textwidth]{../img/SDHCAL.png}
-                    \caption{Détecteur SDHCAL}
-                    \label{detector}
-                \end{figure}
-            \end{column}
-        \end{columns}
-    \end{block}
+\begin{frame}{Sommaire}
+	\begin{columns}[onlytextwidth,T]
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=1-2]
+        \end{column}
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=3-5]
+        \end{column}
+    \end{columns}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Programmes}
+
 
 \subsection{original}
 
@@ -364,7 +381,21 @@
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Outils Numériques}
+
+\begin{frame}{Sommaire}
+	\begin{columns}[onlytextwidth,T]
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=1-2]
+        \end{column}
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=3-5]
+        \end{column}
+    \end{columns}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Script}
 
@@ -436,6 +467,21 @@
 
 \section{Conclusion}
 
+\begin{frame}{Sommaire}
+	\begin{columns}[onlytextwidth,T]
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=1-2]
+        \end{column}
+        \begin{column}{.45\textwidth}
+            \tableofcontents[currentsection, sections=3-5]
+        \end{column}
+    \end{columns}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Premiers résultats}
+
 \begin{frame}{Premiers résultats}{\texttt{analysis}}
 
 	\begin{columns}
@@ -471,7 +517,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\subsection{État actuelle}
 \begin{frame}{Conclusion}
 
 \begin{columns}
