--- a/LaTeX/Presentation/Hocine.tex
+++ b/LaTeX/Presentation/Hocine.tex
@@ -214,6 +214,7 @@
                     \item Collisionneur linéaire 
                     \item 31 km (agrandissable)
                     \item 500 GeV en centre de masse
+                    \item Suites logicielles : \texttt{iLCSoft} avec \texttt{Marlin}
                 \end{itemize}
             \end{column}
         
@@ -234,6 +235,7 @@
                     \item Collisionneur circulaire
                     \item 100 km
                     \item 140 GeV dans le centre de masse
+                    \item Suites logicielles : \texttt{Key4Hep} avec \texttt{Gaudi} 
                 \end{itemize}
             \end{column}
             
@@ -487,8 +489,8 @@
 	\begin{columns}
     
         \begin{column}{0.3\textwidth}
-				\includegraphics[height=0.25\textheight]{../img/bb_original_run_1.png}
-				\includegraphics[height=0.25\textheight]{../img/bb_original_run_2.png}
+				\includegraphics[height=0.25\textheight]{../img/bb_original_run_1.png}\\
+				\includegraphics[height=0.25\textheight]{../img/bb_original_run_2.png}\\
 				\includegraphics[height=0.25\textheight]{../img/bb_original_run_3.png}
         \end{column}
         
@@ -534,6 +536,7 @@
 			\begin{itemize}
 		 		\item Optimisation des codes pour iLCSoft \texttt{analysis}
 		 		\item Adaptation au projet FCC
+                \item Étude de la variation des résultats dùes à la BDT
 			\end{itemize}
 		\end{alertblock}
 	\end{column}
