--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -146,15 +146,31 @@ Mais pour le temps du stage je n'ai pas obtenu l'accès à ce serveur donc je n'
 
 % données locales
 Initialement, on m'a mis à disposition certains de ces fichiers \SLCIO, ceux des collisions de 250 \GeV. 
-Chaque fichier est rangés dans un des 66 dossiers (Figure~\ref{listeProcessus}), qui correspond au code du type de processus.
+Chaque fichier est rangés dans un des 66 dossiers (Figure~\ref{data:list}), qui correspond au code du type de processus.
 
 \begin{figure}[h!]
 	\includegraphics[width=\textwidth]{../img/listeProcessus.png} 
 	\caption{Les noms des dossiers qui correspondent aux numéros de processus}
-	\label{listeProcessus}
+	\label{data:list}
 \end{figure}
 
 Ce dossier a été placé sur le serveur local de l'IP2I : \texttt{/gridgroup/ilc/nnhAnalysisFiles/AHCAL}.
+
+\begin{figure}[h!]
+    \center
+    \begin{array}[ | c | c | c | c | c | c | c | c | c | c | c | ]
+        \hline
+        2 leptoniques & 2 hadroniques & 4 hadroniques & 4 semi-leptoniques & 4 leptoniques & signal & autres higgs \\
+        \hline
+        500006, 500008 & 500010, 500012 & 500062, 500064, 500066, 500068, 500070, 500072 & 500074, 500076, 500078, 500080, 500082, 500084, 500101, 500102, 500103, 500104, 500105, 500106, 500107, 500108, 500110, 500112 & 500086, 500088, 500090, 500092, 500094, 500096, 500098, 500100,
+        500113, 500114, 500115, 500116, 500117, 500118, 500119, 500120,
+        500122, 500124, 500125, 500126, 500127, 500128 & 402007 & 402001, 402002, 402003, 402004, 402005, 402006, 402008, 402009, 402010, 402011, 402012, 402013, 402014, 402182, 402185 \\
+        \hline
+    \end{array}
+    \caption{Signification des codes des processus}
+    \label{data:def}
+\end{figure}
+
 
 %\paragraph{Numéro des processus ???}
 
