--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -20,10 +20,6 @@
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 
-% biblio
-%\usepackage{biblatex}
-%\addbibresource{biblio.bib}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Page de garde %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \author{Alexia \textsc{HOCINE}}
 
@@ -658,7 +654,7 @@ Alors que la seconde équation (\ref{eq:WWstar}) sera reconstruit comme 4 jets, 
 %\printbibheading
 
 
-\nocite{*} % Afficher toute la biblio
+%\nocite{*} % Afficher toute la biblio
 
 \bibliographystyle{plain} %{Nabbrv}
 \bibliography{biblio}
