--- a/LaTeX/Rapport/start.tex
+++ b/LaTeX/Rapport/start.tex
@@ -16,6 +16,6 @@ Au cours de mon stage, j'ai participé à l'atelier tenu par l'IP2I à la \texti
 
 Durant ce week-end, avec 2 autres chercheuses (non physiciennes), Florence \textsc{Boyer} et Liliane \textsc{De Araujo}, on a tenu un débat sur le film \textit{Don't look up : Déni Cosmique} de Adam \textsc{McKay}, sur la crédibilité du discours scientifiques.
 
-Ensuite sur le stand, j'ai pu expliquer les bases scientifiques et des recherches menées par le CNRS et CMS, ainsi que Virgo au près du grand publique. 
+Ensuite sur le stand, j'ai pu expliquer les bases scientifiques et des recherches menées par le CNRS, CMS, et Virgo au près du grand publique. 
 
 De plus, j'ai aussi animé le stand de l'association ?? dont l'objectif est d'expliquer les principes de base de la gravité en 2D avec un drap tenu.
